--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@ layout: default
 title: Cluttered Code | Blog
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+{% for post in site.posts %} 
+    <article>
+        <h2>
+            <a class="visible-xs center-block" href="{{post.url}}">{{post.title}}</a>
+            <a class="hidden-xs" href="{{post.url}}">{{post.title}}</a>
+            <small>{{post.date | date_to_string}}</small>
+        </h2>
+      
+        {{post.excerpt}}
+
+        <a href="{{post.url}}">Continue Reading...</a>
+    </article>
+
+    <hr />
+
+{% endfor %}
