minor css and index header changes and a draft for my first post

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Cluttered Code | Blog
 ---
 
+<h1>Incoherent Snippets from a Code Junkie</h1>
+
 {% for post in site.posts %} 
     <article>
         <h2>
